--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ body {
 }
 
 header {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   background-color: #778899;
+  text-align: center;
 }
 
 footer {
@@ -16,12 +18,19 @@ h1 {
   color: white;
   padding: 60px 0 20px 20px;
   margin: 0;
+  font-family: Ariel, serif;
 }
-
+h2 {
+  color: black;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
 h5 {
   color: white;
   padding-inline: 20px 0; 
   margin: 0;
+  font-family: Times, 'Times New Romans', serif;
+  text-align: center;
 }
 
 main {
