--- a/style.css
+++ b/style.css
@@ -39,4 +39,7 @@ main {
 
 footer {
   padding-left: 20px;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
 }
