--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ header {
   font-family: Georgia, 'Times New Roman', Times, serif;
   background-color: #778899;
   text-align: center;
+  height: auto;
 }
 
 footer {
     background-color: #778899;
     margin: 200px 0 0 0;
     padding: 20px 0;
+    height: auto;
 }
 
 h1 {
@@ -42,4 +44,18 @@ footer {
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
   font-size: 20px;
+}
+h3 {
+   color: black;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+image {
+  height: auto;
+}
+a {
+  a:link;
+  a:visited;
+  a:hover;
+  a:active;
 }
