--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ h3 {
 image {
   height: auto;
 }
-a {
-  a:link;
-  a:visited;
-  a:hover;
-  a:active;
+a:hover{
+  color: red
+}
+a:visited{
+  color: green
 }
